# Spaniard

./: CMakeLists.txt  CMakeLists.txt.user.ad00771  README.md  Resources.qrc  codeeditor.cpp  codeeditor.h  findreplacedialog.cpp  findreplacedialog.h  findreplacedialog.ui  linenumberarea.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  tabdistancedialog.cpp  tabdistancedialog.h  tabdistancedialog.ui  utilities.cpp  utilities.h
